@startuml

hide empty members

note "A seed can be used in a \nhackathon if it is included \nin the set of seeds of that \nedition" as n1
n1 .. Seed

Methodology "1" <-- "0..*" Edition

Edition "1" <-- "0..*" Hackathon

Seed "1" <-up-- "1..*" SeedEditions
Edition "1" <-left-- "0..*" SeedEditions
Seed "1" <-down- "0..*" HackathonSeeds
Hackathon "1" <-down- "0..*" HackathonSeeds

Seed "1" <-- "0..*" SeedLikes
User "1" <-up- "0..*" SeedLikes

class Hackathon {
  logo: String
  startDate: Date
  endDate: Date
  type: HackathonType
  location: String
  description: String
  isVisible: Boolean
  meetLink: String
}

class Edition {
  name: String
  logo: String
  year: Integer
  shortDescription: String
  longDescription: String: String
  catalogPDF: String
  isVisible: Boolean
}

enum HackathonType {
  ON_SITE
  ONLINE
  HYBRID
}

@enduml